--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,16 +1,17 @@
 .header {
-    width: calc(100% - (200px * 2));
-    display: flex;
-    margin: 45px auto 40px;
-    box-sizing: border-box;
-    border-bottom: 1px solid rgb(84, 84, 84, 0.7);
-    
+  width: calc(100% - (200px * 2));
+  display: flex;
+  margin: 45px auto 40px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-
 @media (max-width: 1040px) {
-    .header {
-        width: 100%;
-        margin: 28px 0 42px;
-    }
+  .header {
+    width: 100%;
+    margin: 28px 0 42px;
+  }
 }
